--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,8 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>1.18.36</version> <!-- Check for the latest version -->
+            <scope>provided</scope>
             <optional>true</optional>
         </dependency>
         <dependency>
