--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=one-tab-read
 
+server.port=8080
+
 spring.datasource.url=jdbc:mysql://localhost:3306/one_tab_read
 spring.datasource.username=${MYSQL_USER}
 spring.datasource.password=${MYSQL_PASSWORD}
